testing/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: testing
  namespace: tedy
spec:
  ports:
    - protocol: TCP
      port: 80
      name: "http"
      targetPort: 5000
---
kind: Endpoints
apiVersion: v1
metadata:
  name: testing
  namespace: tedy
subsets:
  - addresses:
      - ip: 192.168.10.108
    ports:
      - port: 5000
        name: "http"
